# reflex-brick-example

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  reflex-brick-example.cabal  shell.nix
nix/: reflex-brick.json  reflex-platform.json
src/: APIClient.hs  Data.hs  Main.hs  Template.hs
